add new destinations

--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
                 <h2>Belize</h2>
             </div>
 
-            <div class="destination" id="barcelona">
-                <h2>Sao Paolo</h2>
+            <div class="destination" id="saopaulo">
+                <h2>Sao Paulo</h2>
+            </div>
+
+            <div class="destination" id="vacaville">
+                <h2>Vacaville</h2>
+            </div>
+            <div class="destination" id="paris">
+                <h2>Paris</h2>
+            </div>
+            <div class="destination" id="scotland">
+                <h2>Scotland</h2>
             </div>
         </div>
     </div>
